@@ -44,7 +44,22 @@ try:
 except ImportError:
     greenlet = None
 
-from werkzeug._compat import string_join, implements_iterator
+from werkzeug._compat import implements_iterator
+
+
+def _mixed_join(iterable, sentinel):
+    """concatenate any string type in an intelligent way."""
+    iterator = iter(iterable)
+    first_item = next(iterator, sentinel)
+    if isinstance(first_item, bytes):
+        return first_item + b''.join(iterator)
+    return first_item + u''.join(iterator)
+
+
+def _newline(reference_string):
+    if isinstance(reference_string, bytes):
+        return b'\n'
+    return u'\n'
 
 
 @implements_iterator
@@ -52,14 +67,35 @@ class IterIO(object):
     """Instances of this object implement an interface compatible with the
     standard Python :class:`file` object.  Streams are either read-only or
     write-only depending on how the object is created.
+
+    If the first argument is an iterable a file like object is returned that
+    returns the contents of the iterable.  In case the iterable is empty
+    read operations will return the sentinel value.
+
+    If the first argument is a callable then the stream object will be
+    created and passed to that function.  The caller itself however will
+    not receive a stream but an iterable.  The function will be be executed
+    step by step as something iterates over the returned iterable.  Each
+    call to :meth:`flush` will create an item for the iterable.  If
+    :meth:`flush` is called without any writes in-between the sentinel
+    value will be yielded.
+
+    Note for Python 3: due to the incompatible interface of bytes and
+    streams you should set the sentinel value explicitly to an empty
+    bytestring (``b''``) if you are expecting to deal with bytes as
+    otherwise the end of the stream is marked with the strong sentinel
+    value.
+
+    .. versionadded:: 0.9
+       `sentinel` parameter was added.
     """
 
-    def __new__(cls, obj):
+    def __new__(cls, obj, sentinel=''):
         try:
             iterator = iter(obj)
         except TypeError:
-            return IterI(obj)
-        return IterO(iterator)
+            return IterI(obj, sentinel)
+        return IterO(iterator, sentinel)
 
     def __iter__(self):
         return self
@@ -126,18 +162,19 @@ class IterIO(object):
 class IterI(IterIO):
     """Convert an stream into an iterator."""
 
-    def __new__(cls, func):
+    def __new__(cls, func, sentinel=''):
         if greenlet is None:
             raise RuntimeError('IterI requires greenlet support')
         stream = object.__new__(cls)
         stream._parent = greenlet.getcurrent()
         stream._buffer = []
         stream.closed = False
+        stream.sentinel = sentinel
         stream.pos = 0
 
         def run():
             func(stream)
-            stream.flush()
+            stream.close()
 
         g = greenlet.greenlet(run, stream._parent)
         while 1:
@@ -149,31 +186,41 @@ class IterI(IterIO):
     def close(self):
         if not self.closed:
             self.closed = True
+            self._flush_impl()
 
     def write(self, s):
         if self.closed:
             raise ValueError('I/O operation on closed file')
-        self.pos += len(s)
-        self._buffer.append(s)
+        if s:
+            self.pos += len(s)
+            self._buffer.append(s)
 
     def writelines(self, list):
-        self.write(string_join(list))
+        for item in list:
+            self.write(item)
 
     def flush(self):
         if self.closed:
             raise ValueError('I/O operation on closed file')
-        data = string_join(self._buffer)
+        self._flush_impl()
+
+    def _flush_impl(self):
+        data = _mixed_join(self._buffer, self.sentinel)
         self._buffer = []
-        self._parent.switch((data,))
+        if not data and self.closed:
+            self._parent.switch()
+        else:
+            self._parent.switch((data,))
 
 
 class IterO(IterIO):
     """Iter output.  Wrap an iterator and give it a stream like interface."""
 
-    def __new__(cls, gen):
+    def __new__(cls, gen, sentinel=''):
         self = object.__new__(cls)
         self._gen = gen
         self._buf = None
+        self.sentinel = sentinel
         self.closed = False
         self.pos = 0
         return self
@@ -216,14 +263,14 @@ class IterO(IterIO):
         except StopIteration:
             pass
         if buf:
-            self._buf_append(string_join(buf))
+            self._buf_append(_mixed_join(buf, self.sentinel))
         self.pos = max(0, pos)
 
     def read(self, n=-1):
         if self.closed:
             raise ValueError('I/O operation on closed file')
         if n < 0:
-            self._buf_append(string_join(self._gen))
+            self._buf_append(_mixed_join(self._gen, self.sentinel))
             result = self._buf[self.pos:]
             self.pos += len(result)
             return result
@@ -231,14 +278,18 @@ class IterO(IterIO):
         buf = []
         try:
             tmp_end_pos = 0 if self._buf is None else len(self._buf)
-            while new_pos > tmp_end_pos:
+            while new_pos > tmp_end_pos or (self._buf is None and not buf):
                 item = next(self._gen)
                 tmp_end_pos += len(item)
                 buf.append(item)
         except StopIteration:
             pass
         if buf:
-            self._buf_append(string_join(buf))
+            self._buf_append(_mixed_join(buf, self.sentinel))
+
+        if self._buf is None:
+            return self.sentinel
+
         new_pos = max(0, new_pos)
         try:
             return self._buf[self.pos:new_pos]
@@ -251,16 +302,13 @@ class IterO(IterIO):
 
         nl_pos = -1
         if self._buf:
-            nl_pos = self._buf.find(
-                b'\n' if isinstance(self._buf, bytes) else u'\n',
-                self.pos
-            )
+            nl_pos = self._buf.find(_newline(self._buf), self.pos)
         buf = []
         try:
             pos = self.pos
             while nl_pos < 0:
                 item = next(self._gen)
-                local_pos = item.find(b'\n' if isinstance(item, bytes) else u'\n')
+                local_pos = item.find(_newline(item))
                 buf.append(item)
                 if local_pos >= 0:
                     nl_pos = pos + local_pos
@@ -269,7 +317,11 @@ class IterO(IterIO):
         except StopIteration:
             pass
         if buf:
-            self._buf_append(string_join(buf))
+            self._buf_append(_mixed_join(buf, self.sentinel))
+
+        if self._buf is None:
+            return self.sentinel
+
         if nl_pos < 0:
             new_pos = len(self._buf)
         else:
