@@ -43,6 +43,7 @@ Release date to be decided, codename to be chosen.
 - Changed repr of exceptions to be less magical.
 - Simplified exception interface to no longer require environmnts
   to be passed to recieve the response object.
+- Added sentinel argument to IterIO objects.
 
 Version 0.8.4
 -------------
